# streaming-histogram

./: .gitignore  README.md  package.yaml  stack.yaml  streaming-histogram.cabal
src/Numeric/Histogram/: Streaming.hs
