name:                streaming-histogram
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/streaming-histogram
license:             GPL-3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          example@example.com
copyright:           2019 Marco Zocca
category:            Numeric
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  default-language:    Haskell2010
  -- ghc-options:         -Wall
  ghc-options:         -Wno-deprecations
  hs-source-dirs:      src
  exposed-modules:     Numeric.Histogram.Streaming
  build-depends:       base >= 4.7 && < 5
                     , primitive
                     , streaming
                     , vector
                     , vector-algorithms
                       -- DEBUG
                     , hspec
                     , QuickCheck

-- executable streaming-histogram
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , streaming-histogram

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:        LibSpec
  main-is:             Spec.hs
  build-depends:       base
                     , streaming-histogram
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/streaming-histogram
